added pointer cursor to button

--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
   .header__button--action:hover {
     background: rgb(204, 198, 198);
     color: black;
+    cursor: pointer;
   }
 
   #static-box {
